# Pedestrians

./: CMakeLists.txt  LICENSE  README.md  example.pwn  pedestrians.inc  pedpaths.json
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
